Bug 37769 Fix directionaly of floatright/floatleft classes on mobile.
- Added the noflip janus annotation, just as on skins/common/commonContent.css of core
- Make the classes have the same scope as our core classes.

--- a/stylesheets/common.css
+++ b/stylesheets/common.css
@@ -259,11 +259,11 @@ img.thumbborder {
 	border: 1px solid #cccccc;
 }
 
-.floatright {
+/* @noflip */div.floatright, table.floatright {
 	float: right;
 }
 
-.floatleft {
+/* @noflip */div.floatleft, table.floatright {
 	float: left;
 }
 
